add org/SBCL User Manual.org

--- a/org/SBCL User Manual.org
+++ b/org/SBCL User Manual.org
@@ -1,3 +1,49 @@
-* dwdwd
-** dwdwdwd
-*** dwdwdwd
+* SBCL 2.4.5 User Manual
+- http://www.sbcl.org/manual/index.html
+
+本手册主要来源于CMUCL系统的手册，它是由卡内基梅隆大学制作并随后发行。
+** 1 获得支持和报告bug
+** 2 介绍
+** 3 启动和停止
+** 4 编译器
+** 5 调试器
+** 6 效率
+** 7 超出ANSI标准
+** 8 外部格式
+** 9 外部函数接口
+** 10 路径名
+** 11 数据流
+** 12 包的锁
+** 13 线程
+** 14 计时器
+*** 14.1 示范
+2秒后显示hw
+#+BEGIN_SRC common-lisp
+(schedule-timer (make-timer (lambda ()
+                              (write-line "Hello,world")
+			      (force-output)))
+		2)
+#+END_SRC
+(org-edit-special
+*** 14.2 计时器
+- timer :: 计时器类型
+  通过make-timer函数创建
+- make-timer :: 创建一个计时器
+  (make-timer function &key name thread)
+  + function :: 计时器触发时，调用的函数
+  + name :: 计时器名词
+  + thread :: 线程，可指定计时器挂载的线程
+- schedule-timer :: 启动定时器
+  (schedule-timer timer time &key repeat-interval absolute-p catch-up)
+  + timer :: 计时器
+  + time :: 触发时间
+  + repeat-interval :: 重新出发计时器的时间，为空时仅出发一次计时器
+- unschedule-timer :: 取消计时器
+  (unschedule-timer timer)
+- list-all-timers :: 返回系统中所有的计时器列表
+  (list-all-timers)
+** 15 网络
+** 16 分析
+** 17 贡献模块
+** 18 弃用
+
